chore: Add a new kind of enemy

--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
             <div class="item-group">STATISTICS</div>
             <ul>
                 <li class="score-item">
-                    <img src="images/heart.png" alt="Lives left">
-                    <span id="lives" class="item-value">5 lives</span>
+                    <img src="images/he-heart.png" alt="Lives left">
+                    <span id="lives" class="item-value">s</span>
                 </li>
                 <li class="score-item">
                     <img src="images/gem-blue.png" alt="Valuable gem">
-                    <span id="gem-blue" class="item-value">0x100</span>
+                    <span id="gem-blue" class="item-value"></span>
                 </li>
                 <li class="score-item">
                     <img src="images/gem-green.png" alt="Valuable gem">
-                    <span id="gem-green" class="item-value">0x200</span>
+                    <span id="gem-green" class="item-value"></span>
                 </li>
                 <li class="score-item">
                     <img src="images/gem-orange.png" alt="Valuable gem">
-                    <span id="gem-orange" class="item-value">0x300</span>
+                    <span id="gem-orange" class="item-value"></span>
                 </li>
                 <li class="score-item">
-                    <img src="images/key.png" alt="Key">
-                    <span id="key" class="item-value">0x400</span>
+                    <img src="images/ke-key.png" alt="Key">
+                    <span id="key" class="item-value"></span>
                 </li>
                 <li class="score-item">
-                    <img src="images/star.png" alt="Star">
-                    <span id="star" class="item-value">0x500</span>
+                    <img src="images/st-star.png" alt="Star">
+                    <span id="star" class="item-value">0</span>
                 </li>
             </ul>
             <div class="item-group">SCORE</div>
             <ul>
                 <li id="score" class="score-item">
-                    <span id="points" class="item-value">0 points</span>
+                    <span id="points" class="item-value"></span>
                 </li>
             </ul>
             </ul>
