--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Arcade Game mMster</title>
-    <link href="https://fonts.googleapis.com/css?family=Aladin|Fredericka+the+Great" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Aladin|Fredericka+the+Great" rel="stylesheet">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/sweetalert2.js"></script>
@@ -61,7 +61,6 @@
                     <span id="points" class="item-value"></span>
                 </li>
             </ul>
-            </ul>
         </div>
     </div>
 
@@ -73,6 +72,5 @@
         <strong>Front-End Web Developer Nanodegree Program</strong>.
     </footer>
 </body>
-<div class="class"></div>
 
 </html>
